--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag :defaults %>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <script type="text/javascript" src="/javascripts/gmap.js" ></script>
+  <script type="text/javascript" src="/javascripts/markerclusterer.js"></script>
   <script type="text/javascript" src="/javascripts/ajax-basic.js" ></script>
 </head>
 
