--- a/app/views/users/_home_guest.html.erb
+++ b/app/views/users/_home_guest.html.erb
@@ -7,6 +7,7 @@
             placeMarker(contentString, <%= measurement.lat %>, <%= measurement.lon %>);
           <% end %>
         <% end %>
+        clusterMarker();
       }
     </script>
 
